# rise-wasm

./: .gitignore  .gitmodules  Cargo.toml  README.md  package.json  test.js  test.wasm  test.wat  tsconfig.json
assembly/allocators/: arena.ts  base.ts  buddy.ts
assembly/helpers/: arrays.ts  crypto.ts  index.ts  strings.ts  time.ts
imports/: imports.ts  utils.ts
js/: imports.js  utils.js
samples/as-p2pkh/: p2pkh.ts  p2pkh.wasm  p2pkh.wat
samples/loop/: index.js  loop.wasm  loop.wat
samples/multisig/: index.js  multisig.ts  multisig.wasm  multisig.wat
samples/p2pkh/: index.js  p2pkh.wasm  p2pkh.wat
samples/timelock-p2pkh/: index.js  p2pkh.ts  p2pkh.wasm  p2pkh.wat
src/: allocator.rs  gas_middleware.rs  globals.rs  import_funcs.rs  import_globals.rs  import_memory.rs  imports.rs  lib.rs  memory.rs  stack_based_memory.rs  storage.rs
src/funcs/: builder.rs  mod.rs  utils.rs
src/funcs/resolvers/: abort.rs  compare.rs  epoch_time.rs  hash160.rs  hex_decode_utf16.rs  hex_decode_utf8.rs  mem_free.rs  mem_init_arena.rs  mem_init_buddy.rs  mem_reset.rs  mod.rs  table_load_arr.rs  table_load_mem.rs  table_load_typed_arr.rs  table_load_utf16.rs  table_load_utf8.rs  table_store_arr.rs  table_store_mem.rs  table_store_typed_arr.rs  table_store_utf16.rs  table_store_utf8.rs  verify_multi_sig.rs  verify_sig.rs
src/funcs_resolver/: add_resolver.rs  builder.rs  compare_resolver.rs  hash160_resolver.rs  look_resolver.rs  minus_resolver.rs  mod.rs  resolver.rs  utils.rs  verify_sig_resolver.rs
src/funcs_resolver/resolvers/: abort.rs  add.rs  arr_to_stack.rs  compare.rs  hash160.rs  hex_decode.rs  hex_decode_utf16.rs  hex_decode_utf8.rs  hex_mem_to_stack.rs  look.rs  mem_alloc.rs  mem_init_arena.rs  mem_reset.rs  mem_to_stack.rs  minus.rs  mod.rs  stack_drop.rs  stack_dup.rs  verify_sig.rs  (+16 more)
src/memory/: mod.rs  wrapper.rs
src/utils/: errors.rs  js_buffer.rs  log.rs  map_trap.rs  mod.rs  wee_alloc.rs
(+10 files in other folders)
