[package]
name = "rise-wasmi"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"
clippy = { version = "0.0.302", optional = true }
wasm-bindgen = "0.2.38"
wasmi = "0.4.3"

console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["clippy", "console_error_panic_hook"]
