[package]
name = "rise-wasm"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "wasmi",
]

[dependencies]
cfg-if = "0.1"
lazycell = "1.2"
hashbrown = "0.1"
wasm-bindgen = "0.2"
wasmi = { path = "./wasmi" }

console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["console_error_panic_hook"]
