[package]
name = "rise-wasm"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "wasmi",
]

[dependencies]
byteorder = { version = "1", default-features = false }
cfg-if = "0.1"
lazycell = "1.2"
hashbrown = "0.1"
hex-serde = "0.1"
hex = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
wasmi = { path = "./wasmi" }

console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["console_error_panic_hook", "wee_alloc"]
